<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCityFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_city_layout"
        style="@style/OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        app:errorEnabled="false"
        app:errorTextAppearance="@string/enter_city_error"
        app:layout_constraintBottom_toTopOf="@id/button_add_city"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_city_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:gravity="center"
        android:padding="15.6dp"
        android:text="@string/add"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_city_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>