<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/item_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/item_margin"
        android:text="@string/lbl_favorites"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/large_text_size"
        android:visibility="gone"
        tools:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_other_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/item_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/item_margin"
        android:text="@string/lbl_other_cities"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/large_text_size"
        android:visibility="gone"
        tools:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/half_standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/half_standard_margin"
        android:background="@color/colorBackgroundCard"
        app:cardCornerRadius="@dimen/radius_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/city_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/xxl_text_size"
                    tools:text="CityName" />

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/xxl_text_size"
                    tools:text="-3" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/icon_margin">

                <ImageView
                    android:id="@+id/icon_favorite"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_favorite_not"
                    app:tint="@color/colorPrimary"
                    android:contentDescription="@string/lbl_add_favorite"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <ImageView
                    android:id="@+id/icon_delete"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colorPrimary"
                    android:contentDescription="@string/lbl_delete"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>