<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundCard"
    android:orientation="vertical"
    tools:context=".ui.DetailsFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/lbl_temperature" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sky"
            android:layout_width="42dp"
            android:layout_height="42dp"
            tools:src="@drawable/ic_cloud"
            android:contentDescription="@string/desc_cloudiness"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/small_margin"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/xl_text_size"
            tools:text="+2 °C" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_feels_like"
            android:layout_gravity="center"
            android:textSize="@dimen/large_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/temperature_feels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/large_text_size"
            tools:text=" +2 °C. " />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sky_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/large_text_size"
            tools:text="Пасмурно" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/three_days_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/lbl_forecast_3_days"
        android:textSize="@dimen/large_text_size" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/three_days_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_day1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorTextPrimary"
                tools:text="30.11" />

            <ImageView
                android:id="@+id/sky_day1"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                tools:src="@drawable/ic_cloud"
                android:contentDescription="@string/desc_cloudiness"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/temperature_day1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/large_text_size"
                tools:text="+2 °C" />
        </LinearLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/smallest_margin"
            android:layout_marginBottom="@dimen/smallest_margin"
            android:background="@color/colorLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layout_day2"
            app:layout_constraintStart_toEndOf="@id/layout_day1"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_day2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider2"
            app:layout_constraintStart_toEndOf="@id/divider1"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorTextPrimary"
                tools:text="01.12" />

            <ImageView
                android:id="@+id/sky_day2"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                tools:src="@drawable/ic_cloud"
                android:contentDescription="@string/desc_cloudiness"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/temperature_day2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/large_text_size"
                tools:text="+2 °C" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/smallest_margin"
            android:layout_marginBottom="@dimen/smallest_margin"
            android:background="@color/colorLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layout_day3"
            app:layout_constraintStart_toEndOf="@id/layout_day2"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_day3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/divider2"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorTextPrimary"
                tools:text="02.12" />

            <ImageView
                android:id="@+id/sky_day3"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                tools:src="@drawable/ic_cloud"
                android:contentDescription="@string/desc_cloudiness"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/temperature_day3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/large_text_size"
                tools:text="+2 °C" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/standard_margin"
        android:background="@color/colorLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/lbl_line_sign" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/line_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/large_text_size"
        tools:text="10 Км" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/standard_margin"
        android:background="@color/colorLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/lbl_pressure" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/large_text_size"
        tools:text="1008 кПа" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/standard_margin"
        android:background="@color/colorLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/lbl_humidity" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/large_text_size"
        tools:text="90%" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/standard_margin"
        android:background="@color/colorLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/lbl_wind" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/large_text_size"
        tools:text="2,83 м/с ЮЮЗ" />
</LinearLayout>